Resolved slide article overflow issue

--- a/public/components/articles/css/articles.css
+++ b/public/components/articles/css/articles.css
@@ -159,7 +159,7 @@ main {
     margin: 1em;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .image-container {
